tests/cases/fail/import_module_no_bare_access.p4
import module_qualified_calls_helpers

def main() -> None:
    print(twice(4))
